apps/tpi-1/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/affinity: "remote"
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: http
  type: ClusterIP
