apps/tpi-1/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: gw.wahoo.li
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
  labels:
    velero.io/exclude-from-backup: "true"
  name: sonarr
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: sonarr.wahoo.li
    http:
      paths:
      - backend:
          service:
            name: ak-outpost-proxy-default
            port:
              number: 9000
        path: /
        pathType: Prefix
